[gd_scene load_steps=2 format=3 uid="uid://ct37vs5ra10bs"]

[ext_resource type="Script" path="res://src/Items/Activables/InteractionHandler.gd" id="1_eyayy"]

[node name="InteractionHandler" type="Area2D"]
modulate = Color(0.745098, 0.898039, 0.831373, 0.54902)
collision_layer = 0
collision_mask = 2048
monitorable = false
script = ExtResource("1_eyayy")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
